<resources>
    <string name="app_name" translatable="false">departament</string>
    <string name="title_servers">Серверы</string>
    <string name="servers_count">Серверов: %d</string>
    <string name="providers_count">подписок: %d</string>
    <string name="search_hint">Поиск серверов…</string>
    <string name="servers_empty_title">Нет серверов</string>
    <string name="servers_add_clipboard">Добавить из буфера</string>
    <string name="servers_section_local">Локальные</string>
    <string name="home_welcome_title">Добро пожаловать</string>
    <string name="home_empty_title">Подписок пока нет</string>
    <string name="home_empty_subtitle">Добавьте подписку, чтобы появились серверы.</string>
    <string name="home_empty_add_qr">Добавить по QR-коду</string>
    <string name="home_empty_add_clipboard">Добавить из буфера обмена</string>
    <string name="home_or_sign_in">Или войдите в свой аккаунт</string>
    <string name="home_buy_subscription">Купить подписку</string>
    <string name="home_link_telegram">Привязать Telegram</string>
    <string name="home_select_server">Выберите сервер</string>
    <string name="home_not_connected">Не подключено</string>
    <string name="menu_add_title">Добавить</string>
    <string name="menu_add_scan_qr">Сканировать QR-код</string>
    <string name="menu_add_clipboard">Добавить из буфера обмена</string>
    <string name="menu_add_tv_send">Отправить на телевизор</string>
    <string name="menu_add_manual">Ввести вручную</string>
    <string name="sub_delete">Удалить подписку</string>
    <string name="sub_delete_confirm">Удалить подписку и её серверы?</string>
    <string name="app_widget_name">departament</string>
    <string name="app_tile_name">departament</string>
    <string name="app_tile_first_use">Сначала добавьте сервер в приложении.</string>
    <string name="navigation_drawer_open">Открыть панель навигации</string>
    <string name="navigation_drawer_close">Закрыть панель навигации</string>
    <string name="migration_success">Данные перенесены</string>
    <string name="action_stop_service">Остановить службу</string>
    <string name="migration_fail">Не удалось перенести данные</string>
    <string name="pull_down_to_refresh">Потяните вниз, чтобы обновить</string>
    <string name="notification_action_stop_v2ray">Остановить</string>
    <string name="notification_channel_subscription">Обновление подписки</string>
    <string name="notification_channel_core_test">Проверка серверов</string>
    <string name="notification_speed" translatable="false">↓ %1$s   ↑ %2$s</string>
    <string name="toast_permission_denied">Разрешение не получено</string>
    <string name="toast_permission_denied_notification">Разрешение на отображение уведомлений не получено</string>
    <string name="notification_action_more">Ещё…</string>
    <string name="toast_services_start">Запуск служб</string>
    <string name="toast_services_stop">Остановка служб</string>
    <string name="toast_services_success">Службы успешно запущены</string>
    <string name="toast_services_failure">Сбой при запуске служб</string>
    <string name="toast_status_connecting">Подключение…</string>
    <string name="toast_status_connected">Прокси подключён</string>
    <string name="toast_status_disconnected">Отключено</string>
    <string name="toast_status_failed">Не удалось подключиться</string>
    <string name="title_server">Сервер</string>
    <string name="menu_item_add_config">Добавить сервер</string>
    <string name="menu_item_save_config">Сохранить сервер</string>
    <string name="menu_item_edit_config">Изменить сервер</string>
    <string name="menu_item_del_config">Удалить сервер</string>
    <string name="menu_item_import_config_qrcode">Импорт из QR-кода</string>
    <string name="menu_item_import_config_clipboard">Импорт из буфера обмена</string>
    <string name="menu_item_import_config_local">Импорт из файла</string>
    <string name="menu_item_import_config_policy_group">Добавить группу политик</string>
    <string name="menu_item_import_config_proxy_chain">Добавить цепочку прокси</string>
    <string name="menu_item_import_config_manually_vmess">Добавить VMess</string>
    <string name="menu_item_import_config_manually_vless">Добавить VLESS</string>
    <string name="menu_item_import_config_manually_ss">Добавить Shadowsocks</string>
    <string name="menu_item_import_config_manually_socks">Добавить SOCKS</string>
    <string name="menu_item_import_config_manually_http">Добавить HTTP</string>
    <string name="menu_item_import_config_manually_trojan">Добавить Trojan</string>
    <string name="menu_item_import_config_manually_wireguard">Добавить WireGuard</string>
    <string name="menu_item_import_config_manually_hysteria2">Добавить Hysteria2</string>
    <string name="del_config_comfirm">Подтверждаете удаление?</string>
    <string name="del_invalid_config_comfirm">Сначала проверьте серверы. Всё равно удалить?</string>
    <string name="server_lab_remarks">Название</string>
    <string name="server_lab_address">Адрес</string>
    <string name="server_lab_port">Порт</string>
    <string name="server_lab_id">ID</string>
    <string name="server_lab_alterid">Альтернативный ID</string>
    <string name="server_lab_security">Безопасность</string>
    <string name="server_lab_network">Сеть</string>
    <string name="server_lab_more_function">Транспорт</string>
    <string name="server_lab_head_type">Тип заголовка</string>
    <string name="server_lab_mode_type">Режим gRPC</string>
    <string name="server_lab_request_host">Узел</string>
    <string name="server_lab_request_host_http">Узел HTTP</string>
    <string name="server_lab_request_host_ws">Узел WS</string>
    <string name="server_lab_request_host_httpupgrade">Узел HTTPUpgrade</string>
    <string name="server_lab_request_host_xhttp">Узел XHTTP</string>
    <string name="server_lab_request_host_h2">Узел H2</string>
    <string name="server_lab_request_host_quic">Шифрование QUIC</string>
    <string name="server_lab_request_host_grpc">Полномочия gRPC</string>
    <string name="server_lab_path">Путь</string>
    <string name="server_lab_path_ws">Путь WS</string>
    <string name="server_lab_path_httpupgrade">Путь HTTPUpgrade</string>
    <string name="server_lab_path_xhttp">Путь XHTTP</string>
    <string name="server_lab_path_h2">Путь H2</string>
    <string name="server_lab_path_quic">Ключ QUIC</string>
    <string name="server_lab_path_kcp">Сид KCP</string>
    <string name="server_lab_path_grpc">Служба gRPC</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint">Отпечаток</string>
    <string name="server_lab_stream_alpn">ALPN</string>
    <string name="server_lab_allow_insecure">Разрешать небезопасные соединения</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">Адрес</string>
    <string name="server_lab_port3">Порт</string>
    <string name="server_lab_id3">Пароль</string>
    <string name="server_lab_security3">Безопасность</string>
    <string name="server_lab_id4">Пароль (необязательно)</string>
    <string name="server_lab_security4">Пользователь (необязательно)</string>
    <string name="server_lab_encryption">Шифрование</string>
    <string name="server_lab_flow">Поток</string>
    <string name="server_lab_public_key">Открытый ключ</string>
    <string name="server_lab_preshared_key">Дополнительный ключ шифрования (необязательно)</string>
    <string name="server_lab_short_id">ShortID</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_mldsa65_verify">mldsa65Verify</string>
    <string name="server_lab_secret_key">Закрытый ключ</string>
    <string name="server_lab_reserved">Reserved (необязательно, через запятую)</string>
    <string name="server_lab_local_address">Локальный адрес (необязательно, IPv4/IPv6 через запятую)</string>
    <string name="server_lab_local_mtu">MTU (необязательно, по умолчанию 1420)</string>
    <string name="server_lab_kcp_mtu">mKCP MTU (необязательно, по умолчанию 1350)</string>
    <string name="server_lab_kcp_tti">mKCP TTI (необязательно, по умолчанию 50)</string>
    <string name="toast_success">Успешно</string>
    <string name="toast_failure">Ошибка</string>
    <string name="toast_none_data">Нет доступных серверов</string>
    <string name="toast_incorrect_protocol">Неправильный протокол</string>
    <string name="toast_decoding_failed">Невозможно декодировать</string>
    <string name="title_file_chooser">Выберите файл</string>
    <string name="toast_require_file_manager">Установите файловый менеджер</string>
    <string name="server_customize_config">Изменить сервер</string>
    <string name="toast_config_file_invalid">Файл не похож на сервер. Выберите другой файл.</string>
    <string name="server_lab_content">Данные</string>
    <string name="toast_none_data_clipboard">В буфере обмена нет данных</string>
    <string name="toast_invalid_url">Неправильный URL</string>
    <string name="toast_insecure_url_protocol">Не используйте небезопасный HTTP-протокол в адресе подписки</string>
    <string name="server_lab_need_inbound">Убедитесь, что входящий порт соответствует настройкам</string>
    <string name="toast_malformed_josn">Сервер повреждён, прочитать его не удалось.</string>
    <string name="server_lab_request_host6">Узел (SNI) (необязательно)</string>
    <string name="toast_action_not_allowed">Это действие запрещено</string>
    <string name="server_obfs_password">Пароль obfs</string>
    <string name="server_lab_port_hop">Смена портов (переопределяет порт)</string>
    <string name="server_lab_port_hop_interval">Интервал смены портов</string>
    <string name="server_lab_bandwidth_down">Входящая пропускная способность (допускаются: k/m/g/t)</string>
    <string name="server_lab_bandwidth_up">Исходящая пропускная способность (допускаются: k/m/g/t)</string>
    <string name="server_lab_xhttp_mode">Режим XHTTP</string>
    <string name="server_lab_xhttp_extra">Необработанный JSON XHTTP Extra, формат: { XHTTPObject }</string>
    <string name="server_lab_final_mask">Необработанный JSON FinalMask, формат: { FinalMaskObject }</string>
    <string name="server_lab_ech_config_list">ECHConfigList</string>
    <string name="server_lab_pinned_ca256">Отпечаток сертификата (SHA-256)</string>
    <string name="server_lab_browser_dialer">Использовать переадресацию браузера</string>
    <string name="server_lab_browser_dialer_tip">Поддерживаются только исходящие соединения XHTTP (packet-up) и WS; настройки, связанные с TLS, могут быть проигнорированы или конфликтовать</string>
    <string name="toast_asset_copy_failed">Невозможно скопировать файл, используйте файловый менеджер</string>
    <string name="menu_item_add_asset">Добавить ресурс</string>
    <string name="menu_item_add_file">Добавить файлы</string>
    <string name="menu_item_add_url">Добавить URL</string>
    <string name="menu_item_scan_qrcode">Сканировать QR-код</string>
    <string name="title_url">URL</string>
    <string name="menu_item_download_file">Загрузить файлы</string>
    <string name="title_user_asset_add_url">Добавить URL ресурса</string>
    <string name="msg_file_not_found">Файл не найден</string>
    <string name="msg_remark_is_duplicate">Название уже существует</string>
    <string name="title_sub_update">Обновить подписку</string>
    <string name="connection_test_pending">Проверить подключение</string>
    <string name="title_configuration_backup">Резервирование конфигурации</string>
    <string name="title_configuration_restore">Восстановление конфигурации</string>
    <string name="title_configuration_share">Поделиться конфигурацией</string>
    <string name="title_webdav_config_setting">Настройки WebDAV</string>
    <string name="backup_section_local">Данные</string>
    <string name="backup_section_cloud">Облачное хранилище</string>
</resources>